# quicknotes

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build_and_test.yml
src/: edit.rs  index.rs  lib.rs  main.rs  note.rs  storage.rs
tests/: index_test.rs  note_test.rs
tests/snapshots/: note_test__editing_an_existing_daily_alters_the_same_file.snap  note_test__opening_two_notes_with_the_same_name_prevents_clobbering_even_if_collision_exists_on_disk.snap  note_test__writes_dailies_to_notes_directory.snap  note_test__writes_notes_to_notes_directory_even_if_inode_changes.snap
tests/testutil/: mod.rs
