[package]
name = "quicknotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
chrono = "0.4.39"
chrono-english = "0.1.7"
clap = { version = "4.5.23", features = ["derive"] }
colored = "2.1.0"
directories = "5.0.1"
itertools = "0.13.0"
nucleo-picker = "0.7.0-alpha"
regex = "1.11.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
rusqlite_migration = "1.3.1"
serde = "1.0.215"
serde_derive = "1.0.215"
sha2 = "0.10.8"
tempfile = "3.14.0"
thiserror = "2.0.6"
toml = "0.8.19"
walkdir = "2.5.0"

[dev-dependencies]
insta = "1.41.1"
stringreader = "0.1.1"
test-case = "3.3.1"
textwrap = "0.16.1"

[profile.dev.package]
insta.opt-level = 3
